testing page to fix low contrast error (1)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ a {
 }
 
 p {
-    font-size: 18px; /*Change from 16px to 18px for web accessibility */
+    font-size: 16px;
 }
 
 .hero {
@@ -83,7 +83,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #1A5C7F; /*Change from #2589BD to #1A5C7F for web accessibility */
 }
 
 /* .benefit-lead {
